src/core/main/default/objects/LogEntryDataMaskRule__mdt/fields/ApplyToRecordJson__c.field-meta.xml
<CustomField>
    <fullName>ApplyToRecordJson__c</fullName>
    <complianceGroup>None</complianceGroup>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When checked, the data mask rule is applied to log entry messages (stored in LogEntryEvent__e.RecordJson__c and LogEntry__c.RecordJson__c)</inlineHelpText>
    <label>Apply to Record JSON</label>
    <type>Checkbox</type>
</CustomField>