src/core/main/default/objects/LogEntryDataMaskRule__mdt/fields/IsEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsEnabled__c</fullName>
    <complianceGroup>None</complianceGroup>
    <defaultValue>true</defaultValue>
    <label>Is Enabled</label>
    <type>Checkbox</type>
</CustomField>